--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- Keyword Metadata -->
     <meta
       name="keywords"
-      content="Mangesh Pukale, Mangesh Pukale Developer, Mangesh pukale Atharva college of Engineering"
+      content="Mangesh Pukale,python full stack Developer, Mangesh pukale Atharva college of Engineering"
     />
     <!-- Webpage Logo -->
     <link rel="shortcut icon" href="./assets/img/favicon.ico" />
